[package]
name = "bench_hummock_meta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
risingwave_common = {path = "../risingwave-dev/src/common"}
risingwave_meta = {path = "../risingwave-dev/src/meta"}
risingwave_rpc_client = {path = "../risingwave-dev/src/rpc_client"}
risingwave_pb = {path = "../risingwave-dev/src/prost"}
tokio = { version = "=0.2.0-alpha.3", package = "madsim-tokio", features = [
    "fs",
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
    "signal",
] }
tracing = "0.1"
tracing-subscriber = "0.2"